--- a/.editorconfig
+++ b/.editorconfig
@@ -2,16 +2,21 @@
 # please see the EditorConfig documentation:
 # http://editorconfig.org
 
+# Default for all files
 [*]
 charset = utf-8
 end_of_line = lf
 indent_size = 4
-indent_style = space
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.yml,package.json}]
-indent_size = 2
+# PSR-2 for PHP
+[*.php]
+indent_style = space
 
 # The indent size used in the package.json file cannot be changed:
 # https://github.com/npm/npm/pull/3180#issuecomment-16336516
+[{*.yml,package.json}]
+indent_size = 2
+indent_style = space
